--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@
                   </p>
                </div>
              </div>
-
-
+              
+            <div class="row">
+              <div class"col-sm">
+                <p>SHIYENI</P>
+              </div>
+              <div class="col-sm">
+                <p>Million</p>
+              </div>
+              </div>
+            </div>
     </section>
             <hr>
   <section id="projects">
