--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
               <div class"col-sm">
                 <p>SHIYENI</P>
               </div>
+              
               <div class="col-sm">
-                <p>Million</p>
+                <h3>MY GOALS</h3>
+                <p>BEING INTHER</p>
+              </div>
+              <div class="col-sm">
+                <h3>GALLARY</h3>
+                <p>BLAH BLAH BLAH</p>
               </div>
               </div>
             </div>
