--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
              </div>
               
             <div class="row">
-              <div class"col-sm">
+              <div class"col-sm border circled">
                 <p>SHIYENI</P>
               </div>
               
