--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
              </div>
               
             <div class="row">
-              <div class"col-sm border-dark rounded">
+              <div class"col-sm border border-dark rounded">
                 <p>SHIYENI</P>
               </div>
               
-              <div class="col-sm border-dark rounded">
+              <div class="col-sm border border-dark rounded">
                 <h3>MY GOALS</h3>
                 <p>BEING INTHER</p>
               </div>
-              <div class="col-sm border-dark rounded">
+              <div class="col-sm border border-dark rounded">
                 <h3>GALLARY</h3>
                 <p>BLAH BLAH BLAH</p>
               </div>
