--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
      </section>
    </div>
           <hr>
-          <a href="#intro">KHITSHWA</a>
+          <a href="#intro">HOME</a>
           <a href="#services">SERV</a>
           <a href="#projects">PROJ</a>
           <a href="#contacts">CONT</a>
