--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/index.css">
@@ -26,16 +26,13 @@
       <div class="row d-flex justify-content-center text-center">
       <div class="col-sm-10 text-center">
 
-             <h1 class="display-4">SHIYENI OZZY</h1>
+             <h1 class="display-4">OZZY - III</h1>
              <hr>
-              <p class="display-4">I AM ME!</p>
+          <p class="display-4">I AM ME!</p>
           <button type="button" class="btn btn-primary"><i class="fa fa-facebook-f pr-1"></i>Facebook</button>
           <button type="button" class="btn btn-info btn-tw"><i class="fa fa-twitter pr-1"></i>Twitter</button>
           <button type="button" class="btn btn-danger btn-em"><i class="fa fa-envelope pr-1"></i>Emails</button>
-          <button type="button" class="btn btn-success btn-wh "><i class="fa fa-whatsapp "></i>WhatsApp</button>
-
-
-
+          <button type="button" class="btn btn-success btn-wh"><i class="fa fa-whatsapp "></i>WhatsApp</button>
       </div>
       </div>
      </div>
@@ -76,7 +73,7 @@
                         by<span style='color: red;'>"Shiyeni Ozzy"</span>
                       <hr>
                      “Those who cannot acknowledge themselves will eventually fail.”<br>
-                         by<span style='color: red; '>"Shiyeni Ozzy"</span>
+                         by<span style='color: red;'>"Shiyeni Ozzy"</span>
                        </p>
                 </div>
               </div>
@@ -86,9 +83,9 @@
             <hr>
   <section id="projects">
            <div class="container-fluid">
-               <div class="row">
+               <div class="row" >
                  <div class="col-sm">
-                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks">
+                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks" style="border-radius: 12px;">
                    <p>The rinnegan was actually derived<br>
                       from the Rinnesharingan.The Rinnesharingan<br>
                       is the dojutsu on Kaguyas forehead which<br>
@@ -98,7 +95,7 @@
                  </div>
 
                  <div class="col-sm">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks" style="border-radius: 12px;">
                     <p>Sasuke Uchiha is one of the last surviving<br>
                        members of Konohagakure's Uchiha clan. After<br>
                        his older brother, Itachi, slaughtered their<br>
@@ -108,7 +105,7 @@
                  </div>
 
                  <div class="col-sm">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks" style="border-radius: 12px;">
                     <p>The rinnegan was actually derived<br>
                        from the Rinnesharingan.The Rinnesharingan<br>
                        is the dojutsu on Kaguyas forehead which<br>
@@ -118,7 +115,7 @@
                  </div>
 
                  <div class="col-sm">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsZu9rMFD5Qt_vEHM3PfNXAxrKzndlFv5LwAQkeCrwgv2pf8Ks" style="border-radius: 12px;">
                     <p>The rinnegan was actually derived<br>
                        from the Rinnesharingan.The Rinnesharingan<br>
                        is the dojutsu on Kaguyas forehead which<br>
@@ -131,7 +128,7 @@
 
               <div class="row">
                  <div class="col-sm">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6">
+                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6" style="border-radius: 12px;">
                   <p>As a former high-ranking ninja of Kiri,<br>
                      Zabuza was a very powerful fighter.<br>
                      Vicious in battle, his talent for combat<br>
@@ -141,7 +138,7 @@
                    </div>
                  <div class="col-sm">
 
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6">
+                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6" style="border-radius: 12px;">
                   <p>As a former high-ranking ninja of Kiri,<br>
                      Zabuza was a very powerful fighter.<br>
                      Vicious in battle, his talent for combat<br>
@@ -151,7 +148,7 @@
                  </div>
                  <div class="col-sm">
 
-                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6">
+                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6" style="border-radius: 12px;">
                      <p>As a former high-ranking ninja of Kiri,<br>
                         Zabuza was a very powerful fighter.<br>
                         Vicious in battle, his talent for combat<br>
@@ -161,7 +158,7 @@
                  </div>
                  <div class="col-sm">
 
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgXM1uNkIufhTUGoRMZUKgNEiPfoXIpBcf3y7uIh9x2BKA1ZR6" style="border-radius: 12px;">
                     <p>As a former high-ranking ninja of Kiri,<br>
                        Zabuza was a very powerful fighter.<br>
                        Vicious in battle, his talent for combat<br>
@@ -173,23 +170,22 @@
                </div>
                </section>
              <hr>
-
-             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+             <div id="carouselExampleSlidesOnly" class="carousel slide">
                <div class="carousel-inner display-center">
                  <div class="carousel-item active">
-                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1549948558-1c6406684186?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="first slide" width="800" height="600">
+                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1549948558-1c6406684186?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="first slide" width="800" height="600" style="border-radius: 12px;">
                  </div>
 
                  <div class="carousel-item">
-                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1554132288-f0017267d92a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="second slide" width="800" height="600">
+                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1554132288-f0017267d92a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="second slide" width="800" height="600" style="border-radius: 12px;">
                  </div>
 
                  <div class="carousel-item">
-                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1550096392-eb33e9d895df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="third slide" width="800" height="600">
+                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1550096392-eb33e9d895df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="third slide" width="800" height="600" style="border-radius: 12px;">
                  </div>
 
                  <div class="carousel-item">
-                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1548625288-08c26b902213?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="fourth slide" width="800" height="600">
+                   <img class="d-block w-60" src="https://images.unsplash.com/photo-1548625288-08c26b902213?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="fourth slide" width="800" height="600" style="border-radius: 12px;">
                  </div>
 
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -241,7 +237,7 @@
               </div>
               <div class="container-fluid" >
               <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d737.624274451153!2d18.63304652119034!3d-33.96740664274759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4fd42ec76ea3%3A0xaa17541e070307ba!2sUsutu+Crescent%2C+Delft%2C+cape+town%2C+7100!5e1!3m2!1sen!2sza!4v1553775268451" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d737.624274451153!2d18.63304652119034!3d-33.96740664274759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc4fd42ec76ea3%3A0xaa17541e070307ba!2sUsutu+Crescent%2C+Delft%2C+cape+town%2C+7100!5e1!3m2!1sen!2sza!4v1553775268451" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen style="border-radius: 12px;"></iframe>
               </div>
           </div>
 
@@ -250,10 +246,10 @@
    </div>
           <hr>
           <div class="last text-center">
-          <button style="background: silver; margin-right: 10px; color: white;"><a href="#intro">HOME-PAGE</a></button>
-          <button style="background: silver; margin-right: 10px; color: white;"><a href="#services">SERVICES-PAGE</a></button>
-          <button style="background: silver; margin-right: 10px; color: white;"><a href="#projects">PROJECT-PAGE</a></button>
-          <button style="background: silver; margin-right: 10px; color: white;"><a href="#contacts">CONTACT-PAGE</a></button>
+          <button style="background: silver; margin-right: 10px; color: white; border-radius: 12px;"><a href="#intro">HOME-PAGE</a></button>
+          <button style="background: silver; margin-right: 10px; color: white; border-radius: 12px;"><a href="#services">SERVICES-PAGE</a></button>
+          <button style="background: silver; margin-right: 10px; color: white; border-radius: 12px;"><a href="#projects">PROJECT-PAGE</a></button>
+          <button style="background: silver; margin-right: 10px; color: white; border-radius: 12px;"><a href="#contacts">CONTACT-PAGE</a></button>
           </div>
         </main>
 
